# whichscript

./: CITATION.cff  README.bak.md  README.md  example_analysis.py  open_generating_script.pyw  pyproject.toml  sudan_plot_try.py
scripts/: add_whichscript_context.reg  add_whichscript_context_user.reg  add_whichscript_png_user.reg  build_open_exe.bat  context_menu_example.reg
tests/: test_auto_logging.py  test_save_output.py
whichscript/: __init__.py  __init__.py+.bak  tracker.py
whichscript.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
